syntax = "proto3";
option go_package = "../transactions";

message Transaction {
    oneof Data {
        StandardTransaction standard_transaction = 1;
        CoinbaseTransaction coinbase_transaction = 2;
        StakeTransaction    stake_transaction    = 3;
    }
}

message Output {
    bytes commitment       = 1;
    bytes ephemeral_pubkey = 2;
    bytes ciphertext       = 3;
}

message StandardTransaction {
    repeated Output outputs =   1;
    uint64 fee                = 2;
    repeated bytes nullifiers = 3;
    bytes anchor              = 4;
    bytes proof               = 5;
}

message CoinbaseTransaction {
    bytes validator_ID       = 1;
    uint64 new_coins         = 2;
    repeated Output outputs  = 3;
    bytes signature          = 4;
    bytes proof              = 5;
}

message StakeTransaction {
    bytes validator_ID = 1;
    uint64 amount      = 2;
    bytes nullifier    = 3;
    bytes signature    = 4;
    bytes proof        = 5;
}
